# rcc

./: .gitignore  ParseJanus.hs  README.md  docs.html  example1.j  index.html  jcc.cabal  params.json  stack.yaml
css/: default.css
doc/examples/: fib.j
doc/web-doc/: Makefile  docs.markdown  index.markdown  site.hs  web-doc.cabal
doc/web-doc/bib/: default.bib
doc/web-doc/css/: default.css
doc/web-doc/docs/: examples.markdown  implementation.markdown  installing.markdown  lang.markdown
doc/web-doc/examples/: add.j  basicExample.j  ifExample.j  mult.j  varInit.j
doc/web-doc/templates/: default.html  doc-list.html
docs/: examples.html  implementation.html  installing.html  lang.html
src/: Circuit.hs  CircuitDiagram.hs  CircuitOptimize.hs  GenJanus.hs  Main.hs  ParseJanus.hs  SimplifyJanus.hs  Simulate.hs
tests/: CompileTests.hs  SimulateTest.hs  SimulateTests.hs  tests.hs
