name:                jcc
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Alex Parent
maintainer:          alexparent@gmail.com
copyright:           © 2015 Alex Parent
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable jcc
  main-is:             Main.hs
  ghc-options: -Werror
               -Wall
               -fwarn-tabs
               -fwarn-incomplete-record-updates
               -fwarn-monomorphism-restriction
               -fwarn-unused-do-bind
               -fwarn-implicit-prelude
               -O
  default-extensions: GeneralizedNewtypeDeriving, FlexibleContexts, GADTs, NoMonomorphismRestriction
  hs-source-dirs: src
  build-depends:       base,
                       mtl,
                       parsec,
                       optparse-applicative,
                       QuickCheck,
                       containers,
                       vector,
                       diagrams,
                       diagrams-svg,
                       diagrams-lib,
                       SVGFonts
  default-language:    Haskell2010
  Other-Modules: Circuit
                 CircuitDiagram
                 CircuitOptimize
                 GenJanus
                 ParseJanus
                 SimplifyJanus
                 Simulate

test-suite tests
  ghc-options: -Wall
  default-extensions:  OverloadedStrings, GeneralizedNewtypeDeriving
  type: exitcode-stdio-1.0
  hs-source-dirs:    tests, src
  main-is: tests.hs
  build-depends: base,
                 HUnit,
                 QuickCheck,
                 test-framework,
                 test-framework-hunit,
                 test-framework-quickcheck2,
                 mtl,
                 parsec,
                 vector
  default-language:    Haskell2010
  Other-Modules: Circuit
                 CircuitDiagram
                 CircuitOptimize
                 GenJanus
                 ParseJanus
                 SimplifyJanus
                 Simulate
                 CompileTests
                 SimulateTests
