name:               web-doc
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable jcc-web-doc
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , containers
                  , pandoc
                  , directory
                  , filepath
  ghc-options:      -threaded
  default-language: Haskell2010
